@@ -2,6 +2,9 @@ package dev.langchain4j.model.openai;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
@@ -10,7 +13,7 @@ class OpenAiResponsesChatRequestParametersTest {
 
     @Test
     void should_store_server_tools() {
-        List<Map<String, Object>> serverTools = List.of(Map.of("type", "web_search"));
+        List<Map<String, Object>> serverTools = Arrays.asList(Collections.singletonMap("type", "web_search"));
 
         OpenAiResponsesChatRequestParameters parameters = OpenAiResponsesChatRequestParameters.builder()
                 .serverTools(serverTools)
@@ -23,31 +26,37 @@ class OpenAiResponsesChatRequestParametersTest {
     void should_override_server_tools() {
         OpenAiResponsesChatRequestParameters defaults = OpenAiResponsesChatRequestParameters.builder()
                 .modelName("gpt-5.4-mini")
-                .serverTools(List.of(Map.of("type", "web_search")))
+                .serverTools(Arrays.asList(Collections.singletonMap("type", "web_search")))
                 .build();
 
         OpenAiResponsesChatRequestParameters override = OpenAiResponsesChatRequestParameters.builder()
-                .serverTools(List.of(Map.of("type", "file_search", "vector_store_ids", List.of("vs_1"))))
+                .serverTools(Arrays.asList(new LinkedHashMap<String, Object>() {{
+                    put("type", "file_search");
+                    put("vector_store_ids", Arrays.asList("vs_1"));
+                }}))
                 .build();
 
         OpenAiResponsesChatRequestParameters merged = defaults.overrideWith(override);
 
         assertThat(merged.serverTools())
-                .containsExactly(Map.of("type", "file_search", "vector_store_ids", List.of("vs_1")));
+                .containsExactly(new LinkedHashMap<String, Object>() {{
+                    put("type", "file_search");
+                    put("vector_store_ids", Arrays.asList("vs_1"));
+                }});
     }
 
     @Test
     void should_include_server_tools_in_equals_and_hash_code() {
         OpenAiResponsesChatRequestParameters first = OpenAiResponsesChatRequestParameters.builder()
-                .serverTools(List.of(Map.of("type", "web_search")))
+                .serverTools(Arrays.asList(Collections.singletonMap("type", "web_search")))
                 .build();
 
         OpenAiResponsesChatRequestParameters second = OpenAiResponsesChatRequestParameters.builder()
-                .serverTools(List.of(Map.of("type", "web_search")))
+                .serverTools(Arrays.asList(Collections.singletonMap("type", "web_search")))
                 .build();
 
         OpenAiResponsesChatRequestParameters third = OpenAiResponsesChatRequestParameters.builder()
-                .serverTools(List.of(Map.of("type", "file_search")))
+                .serverTools(Arrays.asList(Collections.singletonMap("type", "file_search")))
                 .build();
 
         assertThat(first).isEqualTo(second);
@@ -57,7 +66,7 @@ class OpenAiResponsesChatRequestParametersTest {
 
     @Test
     void should_store_server_tools_in_chat_model_default_request_parameters() {
-        List<Map<String, Object>> serverTools = List.of(Map.of("type", "web_search"));
+        List<Map<String, Object>> serverTools = Arrays.asList(Collections.singletonMap("type", "web_search"));
 
         OpenAiResponsesChatModel model = OpenAiResponsesChatModel.builder()
                 .modelName("gpt-5.4-mini")
@@ -73,7 +82,7 @@ class OpenAiResponsesChatRequestParametersTest {
 
     @Test
     void should_store_server_tools_in_streaming_model_default_request_parameters() {
-        List<Map<String, Object>> serverTools = List.of(Map.of("type", "file_search"));
+        List<Map<String, Object>> serverTools = Arrays.asList(Collections.singletonMap("type", "file_search"));
 
         OpenAiResponsesStreamingChatModel model = OpenAiResponsesStreamingChatModel.builder()
                 .modelName("gpt-5.4-mini")
